# video-synthesis

./: .gitignore  CMakeLists.txt  README.md
src/: Makefile  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  img.cpp  img2vid.cpp  imgimg.cpp  imgonvid.cpp  imgxvid.cpp  readimg.cpp
